# gpui-editor

./: Cargo.toml  README.md
examples/: editor_demo.rs
src/: editor.rs  editor_element.rs  element.rs  gap_buffer.rs  lib.rs  main.rs  meta_line.rs  syntax_highlighter.rs  text_buffer.rs
src/editor/: paint.rs  render.rs
